--- a/backend2/package.json
+++ b/backend2/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev":"nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.4.2",
+    "mongoose": "^7.4.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
