--- a/backend2/package.json
+++ b/backend2/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev":"nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2"
   },
